--- a/SparkNotebooks/UpToDate/Scala K-Means C4E.snb.ipynb
+++ b/SparkNotebooks/UpToDate/Scala K-Means C4E.snb.ipynb
@@ -16,7 +16,7 @@
       "clustering4ever % default % http://dl.bintray.com/clustering4ever/Clustering4Ever % maven"
     ],
     "customDeps" : [
-      "clustering4ever % clustering4ever_2.11 % 0.6.7",
+      "clustering4ever % clustering4ever_2.11 % 0.6.8",
       "com.github.haifengl:smile-scala_2.11:1.5.0"
     ],
     "customImports" : null,
@@ -74,8 +74,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 1,
-          "time" : "Took: 2.577s, at 2018-09-09 23:23"
+          "execution_count" : 3,
+          "time" : "Took: 0.804s, at 2018-09-11 15:27"
         }
       ]
     },
@@ -102,7 +102,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-09 23:24:01--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... failed: Name or service not known.\nwget: unable to resolve host address ‘www.clustering4ever.org’\n:sh: Scheme missing.\n--2018-09-09 23:24:31--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-09 23:24:31--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.20’\n\n     0K .                                                     100%  154M=0s\n\n2018-09-09 23:24:31 (154 MB/s) - ‘/tmp/labels.20’ saved [1576/1576]\n\nFINISHED --2018-09-09 23:24:31--\nTotal wall clock time: 30s\nDownloaded: 1 files, 1.5K in 0s (154 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
+          "text" : "--2018-09-11 15:27:39--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv’\n\n     0K .......                                               100%  707M=0s\n\n2018-09-11 15:27:39 (707 MB/s) - ‘/tmp/aggregation.csv’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-11 15:27:39--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-11 15:27:39--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels’\n\n     0K .                                                     100%  120M=0s\n\n2018-09-11 15:27:39 (120 MB/s) - ‘/tmp/labels’ saved [1576/1576]\n\nFINISHED --2018-09-11 15:27:39--\nTotal wall clock time: 0.2s\nDownloaded: 2 files, 9.4K in 0s (392 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
         }
       ]
     },
@@ -125,7 +125,7 @@
         "val datasetSize = 2000000\n",
         "val dim = 100\n",
         "val path = \"/tmp/aggregation.csv\"\n",
-        "val useAggregationDS = true\n",
+        "val useAggregationDS = false\n",
         "\n",
         "val rawData = if( useAggregationDS ) Source.fromFile(path).getLines.map( x => mutable.ArrayBuffer(x.split(\",\").map(_.toDouble):_*) ).toBuffer\n",
         "  else mutable.ArrayBuffer.fill(datasetSize)(mutable.ArrayBuffer.fill(dim)(scala.util.Random.nextDouble))\n",
@@ -138,7 +138,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "datasetSize: Int = 2000000\ndim: Int = 100\npath: String = /tmp/aggregation.csv\nuseAggregationDS: Boolean = true\nrawData: scala.collection.mutable.Buffer[scala.collection.mutable.ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(15.55, 28.65), ArrayBuffer(14.9, 27.55), ArrayBuffer(14.45, 28.35), ArrayBuffer(14.15, 28.8), ArrayBuffer(13.75, 28.05), ArrayBuffer(13.35, 28.45), ArrayBuffer(13.0, 29.15), ArrayBuffer(13.45, 27.5), ArrayBuffer(13.6, 26.5), ArrayBuffer(12.8, 27.35), ArrayBuffer(12.4, 27.85), ArrayBuffer(12.3, 28.4), ArrayBuffer(12.2, 28.65), ArrayBuffer(13.4, 25.1), ArrayBuffer(12.95, 25.95), ArrayBuffer(12.9, 26.5), ArrayBuffer(11.85, 27.0), ArrayBuffer(11.35, 28.0), ArrayBuffer(11.15, 28.7), ArrayBuffer(11.25, 27.4), ArrayBuffer(10.75, 27.7), ArrayBuffer(10.5, 28.35), ArrayBuffer(..."
+          "text" : "datasetSize: Int = 2000000\ndim: Int = 100\npath: String = /tmp/aggregation.csv\nuseAggregationDS: Boolean = false\nrawData: scala.collection.mutable.Buffer[scala.collection.mutable.ArrayBuffer[Double]] = ArrayBuffer(ArrayBuffer(0.6838900970911859, 0.724050533571503, 0.5311304061293061, 0.2975522369888338, 0.2867780694916018, 0.5562766418360646, 0.8905827428962837, 0.7775104380557064, 0.6742966993168792, 0.5786181386768456, 0.050299890962582916, 0.3354201214619035, 0.8935055019613004, 0.4116233956263189, 0.34728865069151527, 0.12858161276637137, 0.07585629920875925, 0.7200489157453509, 0.4937663377630239, 0.10767554363349785, 0.7409014670612578, 0.532780224517245, 0.6039319878992113, 0.29955792944551474, 0.882103757259974, 0.8635999098879921, 0.9781351965740395, 0.5547965871728018, 0.589294..."
         },
         {
           "metadata" : { },
@@ -146,8 +146,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 3,
-          "time" : "Took: 4.343s, at 2018-09-09 23:24"
+          "execution_count" : 5,
+          "time" : "Took: 59.152s, at 2018-09-11 15:28"
         }
       ]
     },
@@ -181,7 +181,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "k: Int = 7\niterMax: Int = 40\nepsilon: Double = 0.5\nmetric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nmetric2: clustering4ever.math.distances.scalar.Minkowski[scala.collection.mutable.ArrayBuffer[Double]] = clustering4ever.math.distances.scalar.Minkowski@416cdee4\n"
+          "text" : "k: Int = 7\niterMax: Int = 40\nepsilon: Double = 0.5\nmetric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nmetric2: clustering4ever.math.distances.scalar.Minkowski[scala.collection.mutable.ArrayBuffer[Double]] = clustering4ever.math.distances.scalar.Minkowski@4f996b6\n"
         },
         {
           "metadata" : { },
@@ -189,8 +189,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 4,
-          "time" : "Took: 2.124s, at 2018-09-09 23:24"
+          "execution_count" : 6,
+          "time" : "Took: 0.687s, at 2018-09-11 15:28"
         }
       ]
     },
@@ -234,16 +234,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 50737379175767\nmodel: clustering4ever.scala.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.scala.clustering.kmeans.KMeansModel@488f7fcf\nt2: Long = 50737674595978\nres6: Double = 0.295420211\n"
+          "text" : "t1: Long = 5929348792211\nmodel: clustering4ever.scala.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.scala.clustering.kmeans.KMeansModel@69af8d07\nt2: Long = 5939842963532\nres12: Double = 10.494171321\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "0.295420211"
+            "text/html" : "10.494171321"
           },
           "output_type" : "execute_result",
-          "execution_count" : 5,
-          "time" : "Took: 3.143s, at 2018-09-09 23:24"
+          "execution_count" : 9,
+          "time" : "Took: 11.359s, at 2018-09-11 15:30"
         }
       ]
     },
