--- a/SparkNotebooks/UpToDate/Scala Gradient Ascent C4E.snb.ipynb
+++ b/SparkNotebooks/UpToDate/Scala Gradient Ascent C4E.snb.ipynb
@@ -11,14 +11,12 @@
     },
     "trusted" : true,
     "sparkNotebook" : null,
-    "customLocalRepo" : "${HOME}/.ivy2",
-    "customRepos" : [
-      "clustering4ever % default % http://dl.bintray.com/clustering4ever/Clustering4Ever % maven"
-    ],
+    "customLocalRepo" : null,
+    "customRepos" : null,
     "customDeps" : [
       "com.github.haifengl:smile-scala_2.11:1.5.0",
       "org.apache.sanselan % sanselan % 0.97-incubator",
-      "clustering4ever % clustering4ever_2.11 % 0.6.8"
+      "org.clustering4ever:clustering4ever_2.11:0.7.0"
     ],
     "customImports" : null,
     "customArgs" : null,
@@ -53,18 +51,19 @@
         "import scala.io.Source\n",
         "import clustering4ever.math.distances.scalar.Euclidean\n",
         "import clustering4ever.util.ScalaImplicits._\n",
-        "import clustering4ever.scala.clusterizables.RealClusterizable\n",
+        "import clustering4ever.scala.clusterizables.SimpleRealClusterizable\n",
         "import clustering4ever.scala.vectorizables.RealVector\n",
         "import clustering4ever.scala.clustering.meanshift.GradientAscent\n",
         "import org.apache.spark.storage.StorageLevel\n",
         "import clustering4ever.scala.kernels.KernelNature\n",
-        "import scala.collection.{immutable, mutable}"
+        "import scala.collection.{immutable, mutable}\n",
+        "import clustering4ever.scala.kernels.KernelArgs"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "import smile.plot._\nimport scala.io.Source\nimport clustering4ever.math.distances.scalar.Euclidean\nimport clustering4ever.util.ScalaImplicits._\nimport clustering4ever.scala.clusterizables.RealClusterizable\nimport clustering4ever.scala.vectorizables.RealVector\nimport clustering4ever.scala.clustering.meanshift.GradientAscent\nimport org.apache.spark.storage.StorageLevel\nimport clustering4ever.scala.kernels.KernelNature\nimport scala.collection.{immutable, mutable}\n"
+          "text" : "import smile.plot._\nimport scala.io.Source\nimport clustering4ever.math.distances.scalar.Euclidean\nimport clustering4ever.util.ScalaImplicits._\nimport clustering4ever.scala.clusterizables.SimpleRealClusterizable\nimport clustering4ever.scala.vectorizables.RealVector\nimport clustering4ever.scala.clustering.meanshift.GradientAscent\nimport org.apache.spark.storage.StorageLevel\nimport clustering4ever.scala.kernels.KernelNature\nimport scala.collection.{immutable, mutable}\nimport clustering4ever.scala.kernels.KernelArgs\n"
         },
         {
           "metadata" : { },
@@ -72,8 +71,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 1,
-          "time" : "Took: 2.743s, at 2018-09-09 23:24"
+          "execution_count" : 11,
+          "time" : "Took: 0.711s, at 2018-10-27 20:27"
         }
       ]
     },
@@ -100,7 +99,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-09 23:24:01--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.16’\n\n     0K .......                                               100%  931K=0.008s\n\n2018-09-09 23:24:01 (931 KB/s) - ‘/tmp/aggregation.csv.16’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-09 23:24:01--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-09 23:24:01--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.18’\n\n     0K .                                                     100%  218M=0s\n\n2018-09-09 23:24:01 (218 MB/s) - ‘/tmp/labels.18’ saved [1576/1576]\n\nFINISHED --2018-09-09 23:24:01--\nTotal wall clock time: 0.2s\nDownloaded: 2 files, 9.4K in 0.008s (1.09 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 67 elided\n"
+          "text" : "--2018-10-27 20:26:05--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.1’\n\n     0K .......                                               100% 1.35G=0s\n\n2018-10-27 20:26:05 (1.35 GB/s) - ‘/tmp/aggregation.csv.1’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-10-27 20:26:05--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-10-27 20:26:05--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.1’\n\n     0K .                                                     100%  340M=0s\n\n2018-10-27 20:26:05 (340 MB/s) - ‘/tmp/labels.1’ saved [1576/1576]\n\nFINISHED --2018-10-27 20:26:05--\nTotal wall clock time: 0.01s\nDownloaded: 2 files, 9.4K in 0s (922 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 71 elided\n"
         }
       ]
     },
@@ -122,14 +121,14 @@
       "source" : [
         "val path = \"/tmp/aggregation.csv\"\n",
         "val data = Source.fromFile(path).getLines.toSeq.map( x => mutable.ArrayBuffer(x.split(\",\").map(_.toDouble):_*)).toParArray.zipWithIndex\n",
-        "    .map{ case (v, id) => new RealClusterizable(id, new RealVector(v)) }\n",
+        "    .map{ case (v, id) => new SimpleRealClusterizable(id, new RealVector(v)) }\n",
         "val labelsPath = \"/tmp/labels\""
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "path: String = /tmp/aggregation.csv\ndata: scala.collection.parallel.mutable.ParArray[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@77e3a06b,None,None), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@2f305866,None,None), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@18316cd5,None,None), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@473d9f41,None,None), RealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@2d378f35,None,None), RealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@e9019d,None,None), RealClusterizable(6,clus..."
+          "text" : "path: String = /tmp/aggregation.csv\ndata: scala.collection.parallel.mutable.ParArray[clustering4ever.scala.clusterizables.SimpleRealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(SimpleRealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@1f45d20c,None,None), SimpleRealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@436b2b2d,None,None), SimpleRealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@6dd035,None,None), SimpleRealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@7a6114f1,None,None), SimpleRealClusterizable(4,clustering4ever.scala.vectorizables.RealVector@4b857c03,None,None), SimpleRealClusterizable(5,clustering4ever.scala.vectorizables.RealVector@512..."
         },
         {
           "metadata" : { },
@@ -137,8 +136,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 3,
-          "time" : "Took: 2.553s, at 2018-09-09 23:24"
+          "execution_count" : 9,
+          "time" : "Took: 1.704s, at 2018-10-27 20:26"
         }
       ]
     },
@@ -163,14 +162,14 @@
         "val k2 = 1\n",
         "val epsilon = 0.00001\n",
         "val maxNumberIter = 50\n",
-        "val kernel1 = KernelNature.EuclideanKNN\n",
-        "val kernelArgs = immutable.Vector(\"30\")"
+        "val kernelType = KernelNature.EuclideanKNN\n",
+        "val kernelArgs = Right(new KernelArgs[mutable.ArrayBuffer[Double], Euclidean[mutable.ArrayBuffer[Double]]](kernelType, metric = Some(metric1), k = Some(k)))"
       ],
       "outputs" : [
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "metric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nk: Int = 40\nk2: Int = 1\nepsilon: Double = 1.0E-5\nmaxNumberIter: Int = 50\nkernel1: clustering4ever.scala.kernels.KernelNature.Value = EuclideanKNN\nkernelArgs: scala.collection.immutable.Vector[String] = Vector(30)\n"
+          "text" : "metric1: clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]] = Euclidean distance with root applied\nk: Int = 40\nk2: Int = 1\nepsilon: Double = 1.0E-5\nmaxNumberIter: Int = 50\nkernelType: clustering4ever.scala.kernels.KernelNature.Value = EuclideanKNN\nkernelArgs: scala.util.Right[Nothing,clustering4ever.scala.kernels.KernelArgs[scala.collection.mutable.ArrayBuffer[Double],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]]] = Right(clustering4ever.scala.kernels.KernelArgs@1f5b5991)\n"
         },
         {
           "metadata" : { },
@@ -178,8 +177,8 @@
             "text/html" : ""
           },
           "output_type" : "execute_result",
-          "execution_count" : 4,
-          "time" : "Took: 0.704s, at 2018-09-09 23:24"
+          "execution_count" : 16,
+          "time" : "Took: 0.766s, at 2018-10-27 20:29"
         }
       ]
     },
@@ -200,14 +199,7 @@
       "cell_type" : "code",
       "source" : [
         "val t1 = System.currentTimeMillis\n",
-        "val convergedDS =  GradientAscent.run[\n",
-        "  Int,\n",
-        "  mutable.ArrayBuffer[Double],\n",
-        "  mutable.ArrayBuffer[Double],\n",
-        "  RealClusterizable[Int, mutable.ArrayBuffer[Double], mutable.ArrayBuffer[Double]],\n",
-        "  Euclidean[mutable.ArrayBuffer[Double]]\n",
-        "](data, metric1, epsilon, maxNumberIter, kernel1, kernelArgs)\n",
-        "\n",
+        "val convergedDS =  GradientAscent.run(data, metric1, epsilon, maxNumberIter, kernelArgs)\n",
         "val t2 = System.currentTimeMillis\n",
         "\n",
         "(t2 - t1) / 1000D"
@@ -216,16 +208,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 1536528247251\nconvergedDS: scala.collection.GenSeq[clustering4ever.scala.clusterizables.RealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@77e3a06b,Some(ArrayBuffer(12.208333333333332, 27.106666666666666)),None), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@2f305866,Some(ArrayBuffer(12.208333333333332, 27.106666666666666)),None), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@18316cd5,Some(ArrayBuffer(12.208333333333332, 27.106666666666666)),None), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@473d9f41,Some(ArrayBuffer(12.208333333333332, 27.106666666666666)),None), RealClust..."
+          "text" : "t1: Long = 1540664985549\nconvergedDS: scala.collection.GenSeq[clustering4ever.scala.clusterizables.SimpleRealClusterizable[Int,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = ParArray(SimpleRealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@1f45d20c,Some(ArrayBuffer(10.29625, 26.335000000000008)),None), SimpleRealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@436b2b2d,Some(ArrayBuffer(10.29625, 26.335000000000008)),None), SimpleRealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@6dd035,Some(ArrayBuffer(10.29625, 26.335000000000008)),None), SimpleRealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@7a6114f1,Some(ArrayBuffer(10.29625, 26.335000000000008)),None), SimpleRealClusterizab..."
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "0.535"
+            "text/html" : "0.453"
           },
           "output_type" : "execute_result",
-          "execution_count" : 5,
-          "time" : "Took: 1.375s, at 2018-09-09 23:24"
+          "execution_count" : 17,
+          "time" : "Took: 1.552s, at 2018-10-27 20:29"
         }
       ]
     },
@@ -253,16 +245,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "res8: smile.plot.Window = Window(javax.swing.JFrame[frame0,460,37,1000x1000,invalid,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,5,25,990x970,invalid,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777673,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,0x0,invalid,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=9,maximumSize=,minimumSize=,preferredSize=])\n"
+          "text" : "res22: smile.plot.Window = Window(javax.swing.JFrame[frame0,460,37,1000x1000,invalid,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,5,25,990x970,invalid,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777673,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,0x0,invalid,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=9,maximumSize=,minimumSize=,preferredSize=])\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "Window(javax.swing.JFrame[frame0,460,37,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777673,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=8203,maximumSize=,minimumSize=,preferredSize=])"
+            "text/html" : "Window(javax.swing.JFrame[frame0,460,37,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 2,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,37,1000x963,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x963,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
           },
           "output_type" : "execute_result",
-          "execution_count" : 6,
-          "time" : "Took: 24.681s, at 2018-09-09 23:24"
+          "execution_count" : 18,
+          "time" : "Took: 2.134s, at 2018-10-27 20:29"
         }
       ]
     }
