--- a/SparkNotebooks/UpToDate/Spark K-Means C4E.snb.ipynb
+++ b/SparkNotebooks/UpToDate/Spark K-Means C4E.snb.ipynb
@@ -18,7 +18,7 @@
     "customDeps" : [
       "com.github.haifengl:smile-scala_2.11:1.5.0",
       "org.apache.sanselan % sanselan % 0.97-incubator",
-      "clustering4ever % clustering4ever_2.11 % 0.6.8"
+      "clustering4ever % clustering4ever_2.11 % 0.6.9-SNAPSHOT"
     ],
     "customImports" : null,
     "customArgs" : null,
@@ -77,7 +77,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 1,
-          "time" : "Took: 3.547s, at 2018-09-09 23:23"
+          "time" : "Took: 0.826s, at 2018-09-19 14:31"
         }
       ]
     },
@@ -104,7 +104,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "--2018-09-09 23:23:30--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.15’\n\n     0K .......                                               100%  919K=0.009s\n\n2018-09-09 23:23:30 (919 KB/s) - ‘/tmp/aggregation.csv.15’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-09 23:23:30--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-09 23:23:30--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.17’\n\n     0K .                                                     100%  188M=0s\n\n2018-09-09 23:23:30 (188 MB/s) - ‘/tmp/labels.17’ saved [1576/1576]\n\nFINISHED --2018-09-09 23:23:30--\nTotal wall clock time: 0.1s\nDownloaded: 2 files, 9.4K in 0.009s (1.07 MB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
+          "text" : "--2018-09-19 14:31:42--  http://www.clustering4ever.org/Datasets/Aggregation/aggregation.csv\nResolving www.clustering4ever.org (www.clustering4ever.org)... 62.210.16.62\nConnecting to www.clustering4ever.org (www.clustering4ever.org)|62.210.16.62|:80... connected.\nHTTP request sent, awaiting response... 200 OK\nLength: 8063 (7.9K) [text/csv]\nSaving to: ‘/tmp/aggregation.csv.2’\n\n     0K .......                                               100% 38.1K=0.2s\n\n2018-09-19 14:31:43 (38.1 KB/s) - ‘/tmp/aggregation.csv.2’ saved [8063/8063]\n\n:sh: Scheme missing.\n--2018-09-19 14:31:43--  http://wget/\nResolving wget (wget)... failed: Name or service not known.\nwget: unable to resolve host address ‘wget’\n--2018-09-19 14:31:43--  http://www.clustering4ever.org/Datasets/Aggregation/labels\nReusing existing connection to www.clustering4ever.org:80.\nHTTP request sent, awaiting response... 200 OK\nLength: 1576 (1.5K)\nSaving to: ‘/tmp/labels.11’\n\n     0K .                                                     100%  177M=0s\n\n2018-09-19 14:31:43 (177 MB/s) - ‘/tmp/labels.11’ saved [1576/1576]\n\nFINISHED --2018-09-19 14:31:43--\nTotal wall clock time: 0.5s\nDownloaded: 2 files, 9.4K in 0.2s (45.6 KB/s)\njava.lang.RuntimeException: Nonzero exit value: 4\n  at scala.sys.package$.error(package.scala:27)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.slurp(ProcessBuilderImpl.scala:132)\n  at scala.sys.process.ProcessBuilderImpl$AbstractBuilder.$bang$bang(ProcessBuilderImpl.scala:103)\n  ... 69 elided\n"
         }
       ]
     },
@@ -149,7 +149,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 3,
-          "time" : "Took: 14.570s, at 2018-09-09 23:23"
+          "time" : "Took: 2.574s, at 2018-09-19 14:31"
         }
       ]
     },
@@ -186,7 +186,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 4,
-          "time" : "Took: 2.527s, at 2018-09-09 23:23"
+          "time" : "Took: 0.786s, at 2018-09-19 14:31"
         }
       ]
     },
@@ -207,15 +207,9 @@
       "cell_type" : "code",
       "source" : [
         "val t1 = System.currentTimeMillis\n",
-        "val model = KMeans.run[\n",
-        "  Long,\n",
-        "  mutable.ArrayBuffer[Double],\n",
-        "  mutable.ArrayBuffer[Double],\n",
-        "  RealClusterizable[Long, mutable.ArrayBuffer[Double], mutable.ArrayBuffer[Double]]\n",
-        "](\n",
+        "val model = KMeans.run(\n",
         "  sc,\n",
-        "//   rdd,\n",
-        "  rawRdd,\n",
+        "  rdd,\n",
         "  k,\n",
         "  epsilon,\n",
         "  iterMax\n",
@@ -227,16 +221,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "t1: Long = 1536528232836\nmodel: clustering4ever.spark.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.spark.clustering.kmeans.KMeansModel@4ba72f9e\nt2: Long = 1536528234206\nres7: Double = 1.37\n"
+          "text" : "t1: Long = 1537360307921\nmodel: clustering4ever.spark.clustering.kmeans.KMeansModel[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double],clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]],clustering4ever.math.distances.scalar.Euclidean[scala.collection.mutable.ArrayBuffer[Double]]] = clustering4ever.spark.clustering.kmeans.KMeansModel@76383067\nt2: Long = 1537360309053\nres7: Double = 1.132\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "1.37"
+            "text/html" : "1.132"
           },
           "output_type" : "execute_result",
           "execution_count" : 5,
-          "time" : "Took: 3.354s, at 2018-09-09 23:23"
+          "time" : "Took: 2.267s, at 2018-09-19 14:31"
         }
       ]
     },
@@ -256,7 +250,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "clusterized: org.apache.spark.rdd.RDD[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[24] at map at K-CommonsSpark.scala:153\nlclusterized: Array[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = Array(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@21f0c75a,None,Some(0)), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@63d358e1,None,Some(0)), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@1f449400,None,Some(0)), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@3e7fc15c,None,Some(0)), RealC..."
+          "text" : "clusterized: org.apache.spark.rdd.RDD[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = MapPartitionsRDD[34] at map at K-CommonsSpark.scala:154\nlclusterized: Array[clustering4ever.scala.clusterizables.RealClusterizable[Long,scala.collection.mutable.ArrayBuffer[Double],scala.collection.mutable.ArrayBuffer[Double]]] = Array(RealClusterizable(0,clustering4ever.scala.vectorizables.RealVector@76c9fb00,None,Some(3)), RealClusterizable(1,clustering4ever.scala.vectorizables.RealVector@63b7052d,None,Some(0)), RealClusterizable(2,clustering4ever.scala.vectorizables.RealVector@35926016,None,Some(0)), RealClusterizable(3,clustering4ever.scala.vectorizables.RealVector@2a51cbe4,None,Some(0)), RealC..."
         },
         {
           "metadata" : { },
@@ -265,7 +259,7 @@
           },
           "output_type" : "execute_result",
           "execution_count" : 6,
-          "time" : "Took: 2.317s, at 2018-09-09 23:23"
+          "time" : "Took: 0.721s, at 2018-09-19 14:31"
         }
       ]
     },
@@ -294,16 +288,7 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "rawData: Array[Array[Double]] = Array(Array(15.55, 28.65), Array(14.9, 27.55), Array(14.45, 28.35), Array(14.15, 28.8), Array(13.75, 28.05), Array(13.35, 28.45), Array(13.0, 29.15), Array(13.45, 27.5), Array(13.6, 26.5), Array(12.8, 27.35), Array(12.4, 27.85), Array(12.3, 28.4), Array(12.2, 28.65), Array(13.4, 25.1), Array(12.95, 25.95), Array(12.9, 26.5), Array(11.85, 27.0), Array(11.35, 28.0), Array(11.15, 28.7), Array(11.25, 27.4), Array(10.75, 27.7), Array(10.5, 28.35), Array(9.65, 28.45), Array(10.25, 27.25), Array(10.75, 26.55), Array(11.7, 26.35), Array(11.6, 25.9), Array(11.9, 25.05), Array(12.6, 24.05), Array(11.9, 24.5), Array(11.1, 25.2), Array(10.55, 25.15), Array(10.05, 25.95), Array(9.35, 26.6), Array(9.3, 27.25), Array(9.2, 27.8), Array(7.5, 28.25), Array(8.55, 27.45), Ar..."
-        },
-        {
-          "metadata" : { },
-          "data" : {
-            "text/html" : "Window(javax.swing.JFrame[frame0,460,37,1000x1000,layout=java.awt.BorderLayout,title=Smile Plot 1,resizable,normal,defaultCloseOperation=DISPOSE_ON_CLOSE,rootPane=javax.swing.JRootPane[,0,34,1000x966,layout=javax.swing.JRootPane$RootLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=16777675,maximumSize=,minimumSize=,preferredSize=],rootPaneCheckingEnabled=true],smile.plot.PlotCanvas[,0,0,1000x966,layout=java.awt.BorderLayout,alignmentX=0.0,alignmentY=0.0,border=,flags=11,maximumSize=,minimumSize=,preferredSize=])"
-          },
-          "output_type" : "execute_result",
-          "execution_count" : 7,
-          "time" : "Took: 3.348s, at 2018-09-09 23:24"
+          "text" : "java.awt.HeadlessException\n  at java.awt.GraphicsEnvironment.checkHeadless(GraphicsEnvironment.java:204)\n  at java.awt.Window.<init>(Window.java:536)\n  at java.awt.Frame.<init>(Frame.java:420)\n  at javax.swing.JFrame.<init>(JFrame.java:233)\n  at smile.plot.Window$.frame(Window.scala:49)\n  at smile.plot.Window$.apply(Window.scala:33)\n  at smile.plot.Operators$class.plot(Operators.scala:86)\n  at smile.plot.package$.plot(package.scala:23)\n  ... 69 elided\n"
         }
       ]
     },
@@ -339,16 +324,16 @@
         {
           "name" : "stdout",
           "output_type" : "stream",
-          "text" : "trueLabels: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[25] at parallelize at <console>:100\ntrueLabelsFrom0: org.apache.spark.rdd.RDD[Long] = MapPartitionsRDD[30] at map at ExternalIndexes.scala:76\npredicts: org.apache.spark.rdd.RDD[Int] = MapPartitionsRDD[31] at map at <console>:104\ntrueAndPredictRDD: org.apache.spark.rdd.RDD[(Int, Int)] = ParallelCollectionRDD[32] at parallelize at <console>:106\nnmi: Double = 0.8294086258162061\nres12: Double = 0.8294086258162061\n"
+          "text" : "trueLabels: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[35] at parallelize at <console>:100\ntrueLabelsFrom0: org.apache.spark.rdd.RDD[Long] = MapPartitionsRDD[40] at map at ExternalIndexes.scala:73\npredicts: org.apache.spark.rdd.RDD[Int] = MapPartitionsRDD[41] at map at <console>:104\ntrueAndPredictRDD: org.apache.spark.rdd.RDD[(Int, Int)] = ParallelCollectionRDD[42] at parallelize at <console>:106\nnmi: Double = 0.5988478670110992\nres12: Double = 0.5988478670110992\n"
         },
         {
           "metadata" : { },
           "data" : {
-            "text/html" : "0.8294086258162061"
+            "text/html" : "0.5988478670110992"
           },
           "output_type" : "execute_result",
           "execution_count" : 8,
-          "time" : "Took: 3.356s, at 2018-09-09 23:24"
+          "time" : "Took: 1.464s, at 2018-09-19 14:31"
         }
       ]
     }
